# librtmp2-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.env  config.example.json  docker-compose.yml  docker-entrypoint.sh
.cursor/: bug-scan-config.md  bug-scan-progress.md
.github/: dependabot.yml
.github/workflows/: apply-librtmp2-crates-0.4.0.yml  apply-pr82-dependency-fix.yml  benchmarks.yml  docker-multiarch.yml  docker.yml  e2e-tests.yml  fix-pr-43-access-key-message.yml  refresh-cargo-lock.yml  release.yml  tests.yml  update-cargo-lock.yml  update-pr82-librtmp2.yml
benches/: http_api.rs
concept/: librtmp2-server.md
docs/: operations.md
include/librtmp2-server/: config.h  db.h  http.h  http_api.h  keygen.h  logger.h  server.h  session_manager.h  stats_collector.h  stream_registry.h
scripts/: apply_pr82_dependency_fix.py
src/: cli.c  config.c  config.rs  db.c  db.rs  http.c  http.rs  http_api.c  http_static.c  keygen.c  keygen.rs  lib.rs  logger.c  logger.rs  main.rs  rate_limit.rs  rtmp_bridge.rs  rtmp_callbacks.c  server.c  server.rs  session_manager.c  stats_collector.c  stream_registry.c  test_support.rs
tests/: CMakeLists.txt  rtmp_http_e2e.rs
tests/integration/: main.c  test_interop_common.h  test_interop_concurrent.c  test_interop_ffmpeg.c  test_interop_haishinkkit.c  test_interop_obs.c
tests/unit/: main.c  test_config.c  test_db.c  test_http_stats.c  test_keygen.c  test_stream_id.c
web/: index.html
