[package]
name = "librtmp2-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "RTMP / E-RTMP media server built on librtmp2"

[lib]
name = "librtmp2_server"
path = "src/lib.rs"

[[bin]]
name = "librtmp2-server"
path = "src/main.rs"

[dependencies]
librtmp2 = { git = "https://github.com/OpenRTMP/librtmp2.git", branch = "main", default-features = false, features = ["tls"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"

[features]
test-support = []

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "http_api"
harness = false
required-features = ["test-support"]

[[test]]
name = "rtmp_http_e2e"
path = "tests/rtmp_http_e2e.rs"
required-features = ["test-support"]

[profile.release]
opt-level = 3
